force-app/main/default/objects/Competency_Data__c/Competency_Data__c.object-meta.xml
<CustomObject>
    <description>NPN Community Home Page Competency Data</description>
    <label>NPN Community Competency Data</label>
    <nameField>
        <label>Competency Data Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NPN Community Competency Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>