force-app/main/default/objects/Competency_Data__c/fields/Competency_Long_Description__c.field-meta.xml
<CustomField>
    <fullName>Competency_Long_Description__c</fullName>
    <label>Competency Long Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>