force-app/main/default/objects/Competency_Data__c/fields/Heading_Link__c.field-meta.xml
<CustomField>
    <fullName>Heading_Link__c</fullName>
    <label>Heading Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>