force-app/main/default/objects/Competency_Data__c/fields/Partner_Home_Page_Image__c.field-meta.xml
<CustomField>
    <fullName>Partner_Home_Page_Image__c</fullName>
    <label>Partner Home Page Image</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>