force-app/main/default/objects/Competency_Data__c/fields/Static_Resource_Image_Path__c.field-meta.xml
<CustomField>
    <fullName>Static_Resource_Image_Path__c</fullName>
    <label>Static Resource Image Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>