force-app/main/default/objects/Competency_Data__c/fields/Vertical_Competency__c.field-meta.xml
<CustomField>
    <fullName>Vertical_Competency__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vertical Competency</label>
    <type>Checkbox</type>
</CustomField>