force-app/main/default/objects/Competency_Data__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Heading_Link__c</columns>
    <columns>Order__c</columns>
    <columns>Partner_Home_Page_Image__c</columns>
    <columns>Static_Resource_Image_Path__c</columns>
    <columns>Vertical_Competency__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>